<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_market"
      android:icon="@drawable/chart_line"
      android:title="@string/menu_main_marketoverview"/>
    <item
      android:id="@+id/nav_alerts"
      android:icon="@drawable/alert_decagram"
      android:title="@string/menu_main_alerts"/>

    <group
      android:id="@+id/grp1"
      android:checkableBehavior="single">
      <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_main_settings"/>
    </group>

    <group
      android:id="@+id/grp2"
      android:checkableBehavior="single">
      <item
        android:id="@+id/nav_feedback"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/menu_main_feedback"/>
      <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_main_about"/>
    </group>

  </group>

</menu>
