<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:minHeight="36dp">

  <TextView
    android:id="@+id/textView24hVolumeCurrencyLabel"
    android:layout_width="130dp"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center_vertical|right"
    android:text="@string/currencylist_header_24hvolume"
    android:textColor="@color/secondaryTextColor"
    android:visibility="@string/marketcap_24hvolume_visibility"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@id/textViewLabelChange1h"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textViewMarketCapCurrencyLabel"
    android:layout_width="130dp"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="1dp"
    android:gravity="center_vertical|right"
    android:text="@string/currencylist_header_marketcap"
    android:textColor="@color/secondaryTextColor"
    android:visibility="@string/marketcap_24hvolume_visibility"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/textView24hVolumeCurrencyLabel"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textViewLabelChange1h"
    android:layout_width="65dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="1dp"
    android:gravity="center"
    android:text="@string/currencylist_header_1h"
    android:textAlignment="center"
    android:textColor="@color/secondaryTextColor"
    android:textSize="13sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/textViewLabelChange1d"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textViewLabelChange1d"
    android:layout_width="65dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="1dp"
    android:gravity="center"
    android:text="@string/currencylist_header_24h"
    android:textAlignment="center"
    android:textColor="@color/secondaryTextColor"
    android:textSize="13sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/textViewLabelChange1w"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textViewLabelChange1w"
    android:layout_width="65dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="1dp"
    android:gravity="center"
    android:text="@string/currencylist_header_7d"
    android:textAlignment="center"
    android:textColor="@color/secondaryTextColor"
    android:textSize="13sp"
    android:visibility="@string/change1w_visibility"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textViewLabelName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="72dp"
    android:text="@string/currencylist_header_nameprice"
    android:textColor="@color/secondaryTextColor"
    android:textSize="13sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
