<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/scrollViewAbout"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginBottom="0dp"
  android:scrollbarStyle="insideOverlay"
  app:layout_constraintLeft_toLeftOf="parent"
  app:layout_constraintRight_toRightOf="parent"
  app:layout_constraintTop_toBottomOf="parent"
  app:layout_constraintTop_toTopOf="parent"
  tools:context=".application.ui.about.AboutFragment">

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/textViewAppname"
      android:layout_width="291dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="@string/app_name"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toTopOf="@+id/imageView2"/>

    <TextView
      android:id="@+id/textViewVersion"
      android:layout_width="291dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toBottomOf="@+id/textViewAppname"/>

    <TextView
      android:id="@+id/textView4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/about_appdescription"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <TextView
      android:id="@+id/textViewUsedThirdParty"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:linksClickable="true"
      android:text="@string/about_thirdparty"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textViewWebsiteInfo"/>

    <TextView
      android:id="@+id/textViewWebsiteInfo"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/about_websiteinfo"
      android:textIsSelectable="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.04"/>

    <ImageView
      android:id="@+id/imageView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:contentDescription="@string/about_logodescription"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/ic_launcher"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
