<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/textViewTotalMarketCapLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/navheader_marketcap"
    android:textColor="@color/snackTextColor"
    android:textSize="13sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent"/>

  <TextView
    android:id="@+id/toolbar24hVolumeLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:text="@string/navheader_24hvol"
    android:textColor="@color/snackTextColor"
    android:textSize="13sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewTotalMarketCapLabel"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="102dp"/>

  <TextView
    android:id="@+id/toolbarMarketCap"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/navheader_na"
    android:textColor="@color/snackTextColor"
    android:textSize="13sp"
    app:layout_constraintStart_toStartOf="@+id/guideline1"
    app:layout_constraintTop_toBottomOf="parent"/>

  <TextView
    android:id="@+id/toolbar24hVolume"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:text="@string/navheader_na"
    android:textColor="@color/snackTextColor"
    android:textSize="13sp"
    app:layout_constraintStart_toStartOf="@+id/guideline1"
    app:layout_constraintTop_toBottomOf="@+id/toolbarMarketCap"/>

</androidx.constraintlayout.widget.ConstraintLayout>